# Minecraft-Unified-Mod-Organizer-

./: README.md  README_EN.md
minecraft-unifier/: API_DOCUMENTATION.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DOCS_INDEX.md  FAQ.md  LICENSE  OPEN_SOURCE_GUIDE.md  README_EN.md  SECURITY_AND_COMPLIANCE.md  TECHNICAL_DOCUMENTATION.md
minecraft-unifier/android/: CMakeLists.txt  android_main.cpp
minecraft-unifier/common/: cmc_format.cpp  cmc_format.h
minecraft-unifier/core/mods/: java_runtime.cpp  java_runtime.h  netease_runtime.cpp  netease_runtime.h
minecraft-unifier/core/render/: shader_converter.cpp  shader_converter.h
minecraft-unifier/core/resources/: resource_manager.cpp  resource_manager.h
minecraft-unifier/gui/android/: android_gui.cpp  android_gui.h
minecraft-unifier/gui/desktop/: main_window.cpp  main_window.h
minecraft-unifier/gui/ingame/: ingame_gui.cpp  ingame_gui.h
minecraft-unifier/injector/android/: apk_injector.cpp  apk_injector.h
minecraft-unifier/injector/linux/: elf_injector.cpp  elf_injector.h
minecraft-unifier/injector/windows/: pe_injector.cpp  pe_injector.h
minecraft-unifier/packer/windows/: netease_packer.cpp  netease_packer.h
minecraft-unifier/tests/core/: core_test.cpp
minecraft-unifier/tests/cross_platform/: cross_platform_test.cpp
minecraft-unifier/tests/e2e/: e2e_test.cpp
minecraft-unifier/tests/injector/: injector_test.cpp
minecraft-unifier/tests/packer/: packer_test.cpp
minecraft-unifier/tests/performance/: performance_test.cpp
